[package]
name = "elements"
version = "0.7.0"
authors = ["Andrew Poelstra <apoelstra@blockstream.com>"]
description = "Library with support for de/serialization, parsing and executing on data structures and network messages related to Elements"
license = "CC0-1.0"
homepage = "https://github.com/ElementsProject/rust-elements/"
repository = "https://github.com/ElementsProject/rust-elements/"
documentation = "https://docs.rs/elements/"

[features]
"serde-feature" = [
    "bitcoin/serde",
    "bitcoin_hashes/serde",
    "serde"
]
"fuzztarget" = []

[dependencies]
bech32 = "0.6"
bitcoin_hashes = { git = "https://github.com/stevenroose/bitcoin_hashes", rev = "bd75e6cfc90efd2c9e3999adf0d92e1a41866cbe" }
secp256k1 = "0.12.0"

[dependencies.bitcoin]
git = "https://github.com/shesek/rust-bitcoin"
rev = "edge"

[dependencies.serde]
version = "1.0"
optional = true

[dev-dependencies]
rand = "0.6.5"
serde_json = "1"
